--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "farnorth/php-goose",
+    "name": "farnorth/goose",
     "type": "library",
     "description": "Readability / Html Content / Article Extractor & Web Scrapping library written in PHP",
     "keywords": ["scraper", "http", "extractor", "text", "content", "scraping", "website", "readability"],
-    "homepage": "https://github.com/farnorth/php-goose",
+    "homepage": "https://github.com/farnorth/goose",
     "license": "Apache-2.0",
     "authors": [
         {
